--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,59 @@
 
 body {
     display: flex;
-    flex-directoin: column;
+    flex-direction: column;
     min-height: 100vh;
+    border: 5px solid grey;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+        width: 30%;
+   
+}
+
+h1 {
+    background-color: #94c47e;
+    color: #ffffff;
+    padding: 10px;
+    text-transform: uppercase;
+    font-family: helvetica;
+    text-align: center;
+}
+
+ul {
+    list-style: none;
+}
+li, li span {
+        font-family: Helvetica;
+}
+
+li {
+    margin: 30px 0 30px 0;
+    color: #f2d657;
+}
+
+li span {
+    color: #ffffff;
+    margin-right: 10px;
+    text-align: center;
+    background-color: red;
+    padding: 5px;
+}
+
+input, button {
+    border: 3px solid #94c47e;
+    height: 40px;
+}
+input {
+    width: 75%;
+}
+
+button {
+    border: 3px solid #94c47e;
+    color: #94c47e;
+    text-transform: uppercase;
+    font-weight: 600;
+    width: 24 %;
 }
