--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h1 {
     font-family: helvetica;
     text-align: center;
 }
-
+ 
 ul {
     list-style: none;
 }
@@ -48,6 +48,7 @@ li span {
 }
 
 input, button {
+    margin-top: 50px;
     border: 3px solid #94c47e;
     height: 40px;
 }
